<resources>
    <string name="app_name">Weekend1</string>
    <string name="create_an_account2">Create an account</string>
    <string name="policy_information">Policy information</string>
    <string name="request_a_rescue_online">Request a rescue online</string>
    <string name="car_health_updates">Car health updates</string>
    <string name="greenflag_customers_can_create_an_account_to_access">GreenFlag customers can create an account to access</string>
    <string name="create_an_account">Create an account</string>
    <string name="email_address">Email Address</string>
    <string name="create_password">Create password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="your_password_should_have_a_minimum_of_8_characters_and_contain_at_least_one_number_one_uppercase_and_one_lowercase_letter_you_can_use_special_characters">Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lowercase letter. You can use special characters.</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="change_photo">Change Photo</string>
    <string name="age">Age</string>
    <string name="choose_birth_date">Choose Birth Date</string>
    <string name="not_specified">Not-Specified</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="not_specified2">Not Specified</string>
    <string name="postal_address_opt">Postal Address (opt)</string>
    <string name="save">Save</string>
</resources>
