<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/greenflag"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/greenflag_foreground" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/greenflag_customers_can_create_an_account_to_access"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greenflag" />

    <ImageView
        android:id="@+id/greencheck1"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/intro"
        app:layout_constraintStart_toStartOf="@+id/intro"
        app:srcCompat="@mipmap/greencheck_foreground"
        tools:layout_editor_absoluteX="49dp" />
    <ImageView
        android:id="@+id/greencheck2"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@+id/greencheck1"
        app:layout_constraintStart_toStartOf="@+id/intro"
        app:srcCompat="@mipmap/greencheck_foreground"
        tools:layout_editor_absoluteX="49dp" />
    <ImageView
        android:id="@+id/greencheck3"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@+id/greencheck2"
        app:layout_constraintStart_toStartOf="@+id/intro"
        app:srcCompat="@mipmap/greencheck_foreground"
        tools:layout_editor_absoluteX="49dp" />
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/car_health_updates"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/greencheck1"
        app:layout_constraintStart_toEndOf="@id/greencheck1"
      />
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/request_a_rescue_online"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/greencheck2"
        app:layout_constraintStart_toEndOf="@id/greencheck2"
        />
    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/policy_information"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/greencheck3"
        app:layout_constraintStart_toEndOf="@id/greencheck3"
        />


    <Button
        android:id="@+id/createAccount"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/gradient_button_background"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>